unpackaged/main/default/objects/Reward__c/Reward__c.object-meta.xml
<CustomObject>
    <label>Reward</label>
    <nameField>
        <label>Reward Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rewards</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>