unpackaged/main/default/objects/Reward__c/fields/Active_Flag__c.field-meta.xml
<CustomField>
    <fullName>Active_Flag__c</fullName>
    <formula>IF( TEXT(Status__c)=&quot;Active&quot;,&quot;Yes&quot;,&quot;No&quot;)</formula>
    <label>Active Flag</label>
    <type>Text</type>
</CustomField>