unpackaged/main/default/objects/Reward__c/fields/BonusBuy_ID__c.field-meta.xml
<CustomField>
    <fullName>BonusBuy_ID__c</fullName>
    <label>BonusBuy ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>