unpackaged/main/default/objects/Reward__c/fields/c_iscanceled__c.field-meta.xml
<CustomField>
    <fullName>c_iscanceled__c</fullName>
    <formula>IF(TEXT(Status__c) = &quot;Cancelled&quot;,&quot;Yes&quot;,&quot;No&quot;)</formula>
    <label>c_iscanceled</label>
    <type>Text</type>
</CustomField>