unpackaged/main/default/objects/Reward__c/fields/c_isexpired__c.field-meta.xml
<CustomField>
    <fullName>c_isexpired__c</fullName>
    <formula>IF(OR(ExpireDate__c &lt; Now(),TEXT(Status__c) = &quot;Expired&quot;),&quot;Yes&quot;,&quot;No&quot;)</formula>
    <label>c_isexpired</label>
    <type>Text</type>
</CustomField>