unpackaged/main/default/objects/Reward__c/fields/c_isextended__c.field-meta.xml
<CustomField>
    <fullName>c_isextended__c</fullName>
    <formula>IF(OriginalExpireDate__c &lt; ExpireDate__c,&quot;Yes&quot;,&quot;No&quot;)</formula>
    <label>c_isextended</label>
    <type>Text</type>
</CustomField>