unpackaged/main/default/objects/Reward__c/fields/CancelledDate__c.field-meta.xml
<CustomField>
    <fullName>CancelledDate__c</fullName>
    <label>Cancelled Date</label>
    <type>DateTime</type>
</CustomField>