unpackaged/main/default/objects/Reward__c/fields/Coupon_ID__c.field-meta.xml
<CustomField>
    <fullName>Coupon_ID__c</fullName>
    <label>Coupon ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>