unpackaged/main/default/objects/Reward__c/fields/Expire_Date_form__c.field-meta.xml
<CustomField>
    <fullName>Expire_Date_form__c</fullName>
    <formula>DATEVALUE(ExpireDate__c) + 1</formula>
    <label>Expire Date</label>
    <type>Date</type>
</CustomField>