unpackaged/main/default/objects/Reward__c/fields/ExpireDate__c.field-meta.xml
<CustomField>
    <fullName>ExpireDate__c</fullName>
    <label>ExpireDate</label>
    <type>DateTime</type>
</CustomField>