unpackaged/main/default/objects/Reward__c/fields/ExtensionDate__c.field-meta.xml
<CustomField>
    <fullName>ExtensionDate__c</fullName>
    <label>Extension Date</label>
    <type>DateTime</type>
</CustomField>