unpackaged/main/default/objects/Reward__c/fields/isRedeemed__c.field-meta.xml
<CustomField>
    <fullName>isRedeemed__c</fullName>
    <formula>IF(TEXT(Status__c)=&quot;Redeemed&quot;,&quot;Yes&quot;,&quot;No&quot;)</formula>
    <label>isRedeemed</label>
    <type>Text</type>
</CustomField>