unpackaged/main/default/objects/Reward__c/fields/IssuanceDate__c.field-meta.xml
<CustomField>
    <fullName>IssuanceDate__c</fullName>
    <label>IssuanceDate</label>
    <type>DateTime</type>
</CustomField>