unpackaged/main/default/objects/Reward__c/fields/LoyaltyId__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyId__c</fullName>
    <externalId>true</externalId>
    <label>LoyaltyId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>