unpackaged/main/default/objects/Reward__c/fields/OriginalExpireDate__c.field-meta.xml
<CustomField>
    <fullName>OriginalExpireDate__c</fullName>
    <label>Original Expiry Date</label>
    <type>DateTime</type>
</CustomField>