unpackaged/main/default/objects/Reward__c/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <label>Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Disqualification</fullName>
            </value>
            <value>
                <fullName>Store Processed Manual Accommodation</fullName>
            </value>
            <value>
                <fullName>Online Transaction Manual Accommodation</fullName>
            </value>
            <value>
                <fullName>Customer Distance</fullName>
            </value>
            <value>
                <fullName>Customer Sick</fullName>
            </value>
            <value>
                <fullName>Customer Traveling</fullName>
            </value>
            <value>
                <fullName>Outside of Country</fullName>
            </value>
            <value>
                <fullName>Did Not Receive Email</fullName>
            </value>
            <value>
                <fullName>Customer Accommodation</fullName>
            </value>
            <value>
                <fullName>Unable to Extend</fullName>
            </value>
            <value>
                <fullName>Gift Card Accommodation</fullName>
            </value>
            <value>
                <fullName>Adding Store Transaction</fullName>
            </value>
            <value>
                <fullName>Adding Online Transaction</fullName>
            </value>
            <value>
                <fullName>Beyond Extension Period</fullName>
            </value>
            <value>
                <fullName>Signup Bonus Points Issue</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>