unpackaged/main/default/objects/Reward__c/fields/RedeemedDate__c.field-meta.xml
<CustomField>
    <fullName>RedeemedDate__c</fullName>
    <label>Redeemed Date</label>
    <type>DateTime</type>
</CustomField>