unpackaged/main/default/objects/Reward__c/fields/Reward_Number__c.field-meta.xml
<CustomField>
    <fullName>Reward_Number__c</fullName>
    <formula>LEFT(SequenceNumber__c,(LEN(SequenceNumber__c) - (LEN(SequenceNumber__c) - FIND(LoyaltyId__c, SequenceNumber__c)+1)))</formula>
    <label>Reward Number</label>
    <type>Text</type>
</CustomField>