unpackaged/main/default/objects/Reward__c/fields/Reward_Status__c.field-meta.xml
<CustomField>
    <fullName>Reward_Status__c</fullName>
    <description>Used in CSR Loyalty Rewards Adjustments</description>
    <label>Reward Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>