unpackaged/main/default/objects/Reward__c/fields/RewardId__c.field-meta.xml
<CustomField>
    <fullName>RewardId__c</fullName>
    <externalId>true</externalId>
    <label>RewardId</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>