unpackaged/main/default/objects/Reward__c/fields/RewardType__c.field-meta.xml
<CustomField>
    <fullName>RewardType__c</fullName>
    <label>RewardType</label>
    <length>5</length>
    <type>Text</type>
</CustomField>