unpackaged/main/default/objects/Reward__c/fields/SequenceNumber__c.field-meta.xml
<CustomField>
    <fullName>SequenceNumber__c</fullName>
    <description>Sequence Number and CouponId from Loyalty system</description>
    <externalId>true</externalId>
    <label>SequenceNumber</label>
    <length>25</length>
    <type>Text</type>
</CustomField>