unpackaged/main/default/objects/Reward__c/fields/TransactionId__c.field-meta.xml
<CustomField>
    <fullName>TransactionId__c</fullName>
    <externalId>true</externalId>
    <label>TransactionId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>