unpackaged/main/default/objects/Reward__c/fields/Web_Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>Web_Operation_Type__c</fullName>
    <label>Web Operation Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>