unpackaged/main/default/objects/Reward__c/fields/Web_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Web_Order_Id__c</fullName>
    <label>Web Order Id</label>
    <type>TextArea</type>
</CustomField>