unpackaged/main/default/objects/Reward__c/listViews/Active_Rewards.listView-meta.xml
<ListView>
    <fullName>Active_Rewards</fullName>
    <columns>NAME</columns>
    <columns>RewardId__c</columns>
    <columns>RewardType__c</columns>
    <columns>LoyaltyId__c</columns>
    <columns>Reason_Code__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>TransactionId__c</columns>
    <columns>IssuanceDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Rewards</label>
</ListView>