unpackaged/main/default/objects/Reward__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RewardType__c</columns>
    <columns>LoyaltyId__c</columns>
    <columns>Reason_Code__c</columns>
    <columns>Amount__c</columns>
    <columns>RewardId__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>TransactionId__c</columns>
    <columns>IssuanceDate__c</columns>
    <columns>CancelledDate__c</columns>
    <columns>RedeemedDate__c</columns>
    <columns>ExpireDate__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>